[gd_scene load_steps=4 format=1]

[ext_resource path="res://addons/eco.fps.controller/kinematic_fps_controller.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

radius = 0.6
height = 0.8

[sub_resource type="RayShape" id=2]

length = 0.4

[node name="actor" type="KinematicBody" groups=[ "player" ]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 5
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"3D" }
active = true
leg_length = 0.4
body_radius = 0.6
body_height = 0.8
camera_height = 1.7
action_range = 2
action_forward = "ui_up"
action_backward = "ui_down"
action_left = "ui_left"
action_right = "ui_right"
action_attack = "ui_action1"
action_jump = "ui_jump"
action_use = "ui_select"
action_reload = "ui_reload"
ACCEL = 2
DEACCEL = 4
FLY_SPEED = 100
FLY_ACCEL = 4
GRAVITY = -9.8
MAX_JUMP_TIMEOUT = 0.2
MAX_ATTACK_TIMEOUT = 0.2
MAX_SLOPE_ANGLE = 40
STAIR_RAYCAST_HEIGHT = 0.75
STAIR_RAYCAST_DISTANCE = 0.58
STAIR_JUMP_SPEED = 5
STAIR_JUMP_TIMEOUT = 0.1
footstep_factor = 0.004
view_sensitivity = 0.3
sfx_library = null
weapon = ""
embed_children = false

[node name="eco_body" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="leg" type="CollisionShape" parent="eco_body"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = -1

[node name="eco_yaw" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="camera" type="Camera" parent="eco_yaw"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 1000.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="actionRay" type="RayCast" parent="eco_yaw/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
layer_mask = 1
type_mask = 15

[node name="shoot-point" type="Spatial" parent="eco_yaw/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -0.377026 )

[node name="weapon-pos" type="Spatial" parent="eco_yaw/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -0.3 )

[node name="eco_ray" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
enabled = true
cast_to = Vector3( 0, -0.8, 0 )
layer_mask = 1
type_mask = 15

[node name="eco_stepRay" type="RayCast" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -0.58 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
layer_mask = 1
type_mask = 15

[node name="eco_sfx" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="eco_tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0


